<resources>
    <string name="app_name" translatable="false">Dicoding Stories</string>
    <string name="label_email" translatable="false">Email</string>
    <string name="error_email_not_valid">Email address is not valid</string>
    <string name="label_password">Password</string>
    <string name="error_password_not_valid">Passwords must be at least 6 characters</string>
    <string name="label_login" translatable="false">Login</string>
    <string name="label_login_subtitle">Share you learning experience with other students</string>
    <string name="label_doesnt_have_account">Doesn\'t have account?</string>
    <string name="label_register_now">Register now!</string>
    <string name="label_content_description_login">Login Illustration</string>
    <string name="label_content_description_register">Register Illustration</string>
    <string name="label_register">Register</string>
    <string name="label_register_subtitle">Sign up and start share your stories with other students</string>
    <string name="label_full_name">Full Name</string>
    <string name="label_already_have_an_account">Already have an account?</string>
    <string name="label_login_here">Login here</string>
    <string name="label_register_success">Your account successfully registered</string>
    <string name="error_fullname_not_valid">Full Name can not be empty!</string>
    <string name="label_create_a_story">Create a Story</string>
    <string name="label_story_image">Story Image</string>
    <string name="label_dicoding_logo">Dicoding Logo</string>
    <string name="label_no_data_illustration">No Data Illustration</string>
    <string name="label_no_data_found">No Data Found!</string>
    <string name="label_detail_story">Detail Story</string>
    <string name="label_select_image">Select image from</string>
    <string name="label_camera">Camera</string>
    <string name="label_gallery">Gallery</string>
    <string name="label_description">Description</string>
    <string name="error_empty_image">Upload image first!</string>
    <string name="error_empty_description">Description must not be empty</string>
    <string name="label_story_uploaded">Story Uploaded</string>
    <string name="label_logout">Logout</string>
    <string name="label_language_setting">Language Setting</string>
    <string name="label_user_story">%s\'s story</string>
    <string name="stories_stack">Stories</string>
    <string name="app_widget_description">Widget dicoding stories</string>
    <string name="label_unable_to_acquire_permission">Failed to acquire permission. Please activate manually!</string>
    <string name="label_retry">Retry</string>
    <string name="loading_error_message">Unable to fetch data</string>
    <string name="label_maps">Maps</string>
    <string name="label_location">Location</string>
    <string name="label_activate_location_message">Please activate your location services</string>
    <string name="label_share_location">Share Location</string>
</resources>