<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addstory.AddStoryFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/label_create_a_story"
        app:titleTextAppearance="@style/StoryAppTypographyStyles.Heading3.Bold" />

    <View
        android:id="@+id/viewSeparator"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <ImageView
            android:id="@+id/ivStoryImage"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:contentDescription="@string/label_story_image"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_placeholder" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tvSelectImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/label_select_image"
        android:textAppearance="@style/StoryAppTypographyStyles.Body1.Bold"
        android:textColor="@color/dark"
        app:layout_constraintEnd_toEndOf="@id/cvImage"
        app:layout_constraintStart_toStartOf="@id/cvImage"
        app:layout_constraintTop_toBottomOf="@id/cvImage" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCamera"
        style="@style/StoryApp.Button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:text="@string/label_camera"
        app:icon="@drawable/ic_baseline_camera_alt_24"
        app:iconTint="@color/light"
        app:layout_constraintEnd_toStartOf="@+id/btnGallery"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/tvSelectImage"
        app:layout_constraintTop_toBottomOf="@id/tvSelectImage" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGallery"
        style="@style/StoryApp.Button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:text="@string/label_gallery"
        app:icon="@drawable/ic_baseline_image_24"
        app:iconTint="@color/light"
        app:layout_constraintEnd_toEndOf="@id/tvSelectImage"
        app:layout_constraintStart_toEndOf="@+id/btnCamera"
        app:layout_constraintTop_toBottomOf="@id/tvSelectImage" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/label_description"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textAppearance="@style/StoryAppTypographyStyles.Body1"
        android:textColor="@color/dark"
        app:layout_constraintEnd_toEndOf="@id/cvImage"
        app:layout_constraintStart_toStartOf="@id/cvImage"
        app:layout_constraintTop_toBottomOf="@id/btnCamera" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/swLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/label_share_location"
        android:textAppearance="@style/StoryAppTypographyStyles.Body1"
        app:layout_constraintEnd_toEndOf="@id/cvImage"
        app:layout_constraintStart_toStartOf="@id/cvImage"
        app:layout_constraintTop_toBottomOf="@id/etDescription" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCreateStory"
        style="@style/StoryApp.Button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="24dp"
        android:text="@string/label_create_a_story"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/cvImage"
        app:layout_constraintStart_toStartOf="@id/cvImage" />

</androidx.constraintlayout.widget.ConstraintLayout>