<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.login.LoginFragment">

    <ImageView
        android:id="@+id/ivIcon"
        android:layout_width="0dp"
        android:layout_height="220dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_undraw_buffer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/label_content_description_login" />

    <TextView
        android:id="@+id/tvLoginLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:includeFontPadding="false"
        android:text="@string/label_login"
        android:textAppearance="@style/StoryAppTypographyStyles.Heading1.Bold"
        android:textColor="@color/dark"
        app:layout_constraintEnd_toEndOf="@id/ivIcon"
        app:layout_constraintStart_toStartOf="@id/ivIcon"
        app:layout_constraintTop_toBottomOf="@id/ivIcon" />

    <TextView
        android:id="@+id/tvLoginSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/label_login_subtitle"
        android:textAppearance="@style/StoryAppTypographyStyles.Body1"
        android:textColor="@color/gray2"
        app:layout_constraintEnd_toEndOf="@id/ivIcon"
        app:layout_constraintStart_toStartOf="@id/ivIcon"
        app:layout_constraintTop_toBottomOf="@id/tvLoginLabel" />

    <io.astronout.dicodingstoryapp.customviews.EmailEditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textAppearance="@style/StoryAppTypographyStyles.Body1"
        android:textColor="@color/dark"
        app:layout_constraintEnd_toEndOf="@id/ivIcon"
        app:layout_constraintStart_toStartOf="@id/ivIcon"
        app:layout_constraintTop_toBottomOf="@id/tvLoginSubtitle" />

    <io.astronout.dicodingstoryapp.customviews.PasswordEditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/StoryAppTypographyStyles.Body1"
        android:textColor="@color/dark"
        app:layout_constraintEnd_toEndOf="@id/ivIcon"
        app:layout_constraintStart_toStartOf="@id/ivIcon"
        app:layout_constraintTop_toBottomOf="@id/etEmail" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        style="@style/StoryApp.Button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:text="@string/label_login"
        app:layout_constraintEnd_toEndOf="@id/ivIcon"
        app:layout_constraintStart_toStartOf="@id/ivIcon"
        app:layout_constraintTop_toBottomOf="@id/etPassword" />

    <TextView
        android:id="@+id/tvRegisterLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="2dp"
        android:text="@string/label_doesnt_have_account"
        android:textAppearance="@style/StoryAppTypographyStyles.Body2"
        android:textColor="@color/gray2"
        app:layout_constraintEnd_toStartOf="@+id/tvRegister"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/ivIcon"
        app:layout_constraintTop_toBottomOf="@id/btnLogin" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:text="@string/label_register_now"
        android:layout_marginStart="2dp"
        android:textAppearance="@style/StoryAppTypographyStyles.Body2.Medium"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@id/ivIcon"
        app:layout_constraintStart_toEndOf="@+id/tvRegisterLabel"
        app:layout_constraintTop_toTopOf="@id/tvRegisterLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>